--- a/musicProject/Views/Shared/_Layout.cshtml
+++ b/musicProject/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Album" asp-action="Index">Albums</a>
+                        </li>                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Artist" asp-action="Index">Artists</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
