--- a/musicProject/Views/Shared/_Layout.cshtml
+++ b/musicProject/Views/Shared/_Layout.cshtml
@@ -30,6 +30,15 @@
                         </li>                        
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Artist" asp-action="Index">Artists</a>
+                        </li>                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Track" asp-action="Index">Tracks</a>
+                        </li>                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AlbumReview" asp-action="NewIndex">Album Reviews</a>
+                        </li>                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TrackReview" asp-action="NewIndex">Track Reviews</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
