--- a/musicProject/Views/Album/Create.cshtml
+++ b/musicProject/Views/Album/Create.cshtml
@@ -1,5 +1,9 @@
 ﻿@model musicProject.Models.AlbumModels.AlbumCreate
 
+@{
+    ViewData["Title"] = "Create";
+}
+
 <div class="container">
     <form method="post" asp-action="Create">
         <div class="form-group">
@@ -8,7 +12,8 @@
         </div>
         <div class="form-group">
             <label for="ArtistId">Artist</label>
-            <input asp-for="@Model.ArtistId" type="number" class="form-control" name="ArtistId" placeholder="artist" />
+            @* <input asp-for="@Model.ArtistId" type="number" class="form-control" name="ArtistId" placeholder="artist" /> *@
+            <select asp-for="ArtistId" asp-items="ViewBag.ArtistId" class="form-control"></select>
         </div>
         <div class="form-group">
             <label for="Genre">Genre</label>
