--- a/musicProject/Views/Artist/Detail.cshtml
+++ b/musicProject/Views/Artist/Detail.cshtml
@@ -21,5 +21,6 @@
         }
     </ol>
     <hr />
-    <a asp-action="Index" asp-controller="Artist">Back To Index</a>
+    <a asp-action="Index" asp-controller="Artist">Back To Artists</a> |
+    <a asp-action="Index" asp-controller="Album">Back To Albums</a>
 </body>
