--- a/musicProject/Views/TrackReview/Detail.cshtml
+++ b/musicProject/Views/TrackReview/Detail.cshtml
@@ -18,6 +18,7 @@
 <body>
     <h3>Review Details</h3>
     <h4>@Model.Track.Title</h4>
+    <h5>@Model.Track.Album.Title</h5>
     <h5>@Model.Track.Album.Artist.Name</h5>
     @* <p>Released: @Model.Track.Album.Released.Year</p> *@
     <hr />
