--- a/musicProject/Views/AlbumReview/NewIndex.cshtml
+++ b/musicProject/Views/AlbumReview/NewIndex.cshtml
@@ -13,6 +13,7 @@
             <th>Artist </th>
             <th>Rating</th>
             <th>All Reviews</th>
+            <th>&nbsp;</th>
         </tr>
     </thead>
     <tbody>
@@ -23,6 +24,7 @@
                 <td>@album.Artist.Name</td>
                 <td>@album.Rating</td>
                 <td><a asp-controller="AlbumReview" asp-action="ReviewsByAlbum" asp-route-id="@album.Id">Reviews</a> </td>
+                <td><a asp-controller="AlbumReview" asp-action="Review" asp-route-id="@album.Id">Create Review</a> </td>
             </tr>
         }
     </tbody>
