--- a/musicProject/Views/Artist/Index.cshtml
+++ b/musicProject/Views/Artist/Index.cshtml
@@ -2,11 +2,21 @@
 
 <h1 class="text-center">All Artists</h1>
 <a asp-action="Create" asp-controller="Artist" class="text-primary">Create An Artist</a>
-<hr />
-<div>
-    @foreach (var artist in Model)
-    {
-        <h5><a asp-action="Detail" asp-controller="Artist" asp-route-name="@artist.Name">@artist.Name</a></h5>
-        <br />
-    }
-</div>
+<table class="table table-striped table-dark">
+    <thead>
+        <tr>
+            <th>Artist</th>
+            <th>Details</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var artist in Model)
+        {
+            <tr>
+                @* <th><a asp-action="Detail" asp-controller="Artist" asp-route-name="@artist.Name">@artist.Name</a></th> *@
+                <td>@artist.Name</td>
+                <td><a asp-action="Detail" asp-controller="Artist" asp-route-name="@artist.Name">Details</a></td>
+            </tr>
+        }
+    </tbody>
+</table>
