--- a/musicProject/Views/Track/Create.cshtml
+++ b/musicProject/Views/Track/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model musicProject.Models.TrackModels.TrackCreate
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-<h1>@Model.AlbumId</h1>
+<h3>Add Tracks To Album</h3>
 
 <div class="container">
     <form method="post" asp-action="Create">
