--- a/musicProject/Views/AlbumReview/Delete.cshtml
+++ b/musicProject/Views/AlbumReview/Delete.cshtml
@@ -1,10 +1,8 @@
 ﻿@model musicProject.Models.AlbumReviewModels.AlbumReviewDetail
 
-<h1>Delete</h1>
-
 <h3>Are you sure you want to delete this review?</h3>
 <hr />
-<div>
+<div id="reviewDetail">
     <h4>@Model.Album.Title</h4>
     <p>@Model.Rating</p>
     <p>@Model.Content</p>
@@ -12,7 +10,7 @@
     <form asp-action="DeleteReview">
         <input asp-for="@Model.Id" hidden />
         <button type="submit" value="Delete" class="btn btn-danger">Delete</button> |
-        <a asp-action="MyAlbumReviews">Back to List</a>
+        <a id="actions" asp-action="MyAlbumReviews">Back to List</a>
     </form>
 </div>
 
