--- a/musicProject/Views/AlbumReview/Detail.cshtml
+++ b/musicProject/Views/AlbumReview/Detail.cshtml
@@ -1,5 +1,5 @@
 ﻿@using System.Security.Claims
-@inject IHttpContextAccessor _contextAccessor; 
+@inject IHttpContextAccessor _contextAccessor;
 @model musicProject.Models.AlbumReviewModels.AlbumReviewDetail
 
 @{
@@ -16,24 +16,27 @@
 </form>
 
 <body>
-    <h3>Review Details</h3>
-    <h4>@Model.Album.Title</h4>
-    <h5>@Model.Album.Artist.Name</h5>
-    @* <p>Released: @Model.Album.Released.Year</p> *@
+    <div id="reviewDetailTitle">
+        <h3><i>Review Details</i></h3>
+        <h4 id="reviewTitle">@Model.Album.Title</h4>
+        <h5 id="reviewArtist">@Model.Album.Artist.Name</h5>
+    </div>
     <hr />
-    <p>Score: @Model.Rating / 10</p>
-    <p>Comment: @Model.Content</p>
-    <p>By: @Model.User.UserName</p>
+    <div id="reviewDetail">
+        <p>Score: @Model.Rating / 10</p>
+        <p>Comment: @Model.Content</p>
+        <p>By: @Model.User.UserName</p>
+    </div>
 </body>
 
-<div>
-    <a asp-controller="AlbumReview" asp-action="NewIndex">Back to List</a> 
+<div id="actions">
+    <a asp-controller="AlbumReview" asp-action="NewIndex">Back to List</a>
     @if (User.Identity.IsAuthenticated && Model.User.Id == _userId)
     {
         <span><strong>|</strong></span>
         <a asp-controller="AlbumReview" asp-action="Update" asp-route-id="@Model.Id">Edit</a>
         <span><strong>|</strong></span>
-        <a asp-controller = "AlbumReview" asp-action = "Delete" asp-route-id = "@Model.Id" > Delete </a>
+        <a asp-controller="AlbumReview" asp-action="Delete" asp-route-id="@Model.Id"> Delete </a>
     }
 
 </div>
