--- a/musicProject/Views/AlbumReview/MyAlbumReviews.cshtml
+++ b/musicProject/Views/AlbumReview/MyAlbumReviews.cshtml
@@ -1,8 +1,11 @@
-﻿<h1>My Album Reviews</h1>
+﻿
+<div id="actions" class="text-center">
+    <h1>My Album Reviews</h1>
+    <a asp-action="Create" asp-controller="AlbumReview" class="text-primary">Review An Album</a> |
+    <a asp-action="NewIndex">Back to List</a>
+</div>
 
-<a asp-action="Create" asp-controller="AlbumReview" class="text-primary">Review An Album</a>
-
-<table class="table table-striped table-dark">
+<table>
     <thead>
         <tr>
             <th>Album </th>
@@ -27,7 +30,3 @@
         }
     </tbody>
 </table>
-
-<div>
-    <a asp-action="NewIndex">Back to List</a>
-</div>
