--- a/musicProject/Views/AlbumReview/Review.cshtml
+++ b/musicProject/Views/AlbumReview/Review.cshtml
@@ -1,23 +1,18 @@
 ﻿@model musicProject.Models.AlbumReviewModels.AlbumReviewCreate
 
 
-<div class="container">
+<div id="create" class="container">
     <form method="post" asp-action="Review">
         <input asp-for="@Model.UserId" hidden />
         <input asp-for="@Model.AlbumId" hidden />
-        @*         <div class="form-group">
-        <label for="AlbumId">Album</label>
-        @* <input asp-for="@Model.AlbumId" class="form-control" name="AlbumId" placeholder="Album ID" /> *@
-        @*             <select asp-for="AlbumId" asp-items="ViewBag.AlbumId" class="form-control"></select>
-        </div>  *@
         <div class="form-group">
             <label for="Rating">Rating</label>
-            <input asp-for="Rating" type="number" class="form-control" name="Rating" placeholder="1-10" />
+            <input id="createInput" asp-for="Rating" type="number" class="form-control" name="Rating" placeholder="1-10" />
         </div>
         <div class="form-group">
             <label for="Content">Content</label>
-            <input type="text" class="form-control" name="Content" placeholder="your thoughts..." />
+            <input id="createInput" type="text" class="form-control" name="Content" placeholder="your thoughts..." />
         </div>
-        <button type="submit" class="btn btn-primary btn-block mt-2">Create</button>
+        <button id="reviewButton" type="submit" class="btn btn-primary btn-block mt-2">Create</button>
     </form>
 </div>
