--- a/musicProject/Views/AlbumReview/Update.cshtml
+++ b/musicProject/Views/AlbumReview/Update.cshtml
@@ -2,29 +2,28 @@
 
 
 <h1>Edit Review</h1>
-<div class="row">
+<div id="create" class="row">
     <div class="col-md-4">
         <form asp-action="Update">
             <input asp-for="@Model.Id" hidden />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Rating" class="control-label"></label>
-                <input asp-for="Rating" class="form-control" />
+                <input id="createInput" asp-for="Rating" class="form-control" />
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Content" class="control-label"></label>
-                <input asp-for="Content" class="form-control" />
+                <input id="createInput" asp-for="Content" class="form-control" />
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
-            <br />
-            <div class="form-group">
-                <input class="form-control" type="submit" value="Save" class="btn btn-primary" />
+            <div id="saveButton" class="form-group">
+                <input id="createInput" class="form-control" type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
+<div id="actionsEdit">
     <a asp-action="MyAlbumReviews">Back to List</a>
 </div>
