--- a/musicProject/Views/TrackReview/Detail.cshtml
+++ b/musicProject/Views/TrackReview/Detail.cshtml
@@ -16,23 +16,26 @@
 </form>
 
 <body>
-    <h3>Review Details</h3>
-    <h4>@Model.Track.Title</h4>
-    <h5>@Model.Track.Album.Title</h5>
-    <h5>@Model.Track.Album.Artist.Name</h5>
-    @* <p>Released: @Model.Track.Album.Released.Year</p> *@
-    <hr />
-    <p>Score: @Model.Rating / 10</p>
-    <p>Comment: @Model.Content</p>
-    <p>By: @Model.User.UserName</p>
+    <div id="reviewDetailTitle">
+        <h3><i>Review Details</i></h3>
+        <h4 id="reviewTitle">@Model.Track.Title</h4>
+        <h5 id="reviewArtist">@Model.Track.Album.Title</h5>
+        <h5 id="reviewArtist">@Model.Track.Album.Artist.Name</h5>
+    </div>
+        <hr />
+    <div id="reviewDetail">
+        <p>Score: @Model.Rating / 10</p>
+        <p>Comment: @Model.Content</p>
+        <p>By: @Model.User.UserName</p>
+    </div>
 </body>
 
-<div>
-    <a asp-controller="TrackReview" asp-action="NewIndex">Back to List</a> 
-    @if(User.Identity.IsAuthenticated && Model.User.Id == _userId)
+<div id="actionsReview">
+    <a asp-controller="TrackReview" asp-action="NewIndex">Back to List</a>
+    @if (User.Identity.IsAuthenticated && Model.User.Id == _userId)
     {
         <span><strong>|</strong></span>
-        <a asp-controller="TrackReview" asp-action="Update" asp-route-id="@Model.Id">Edit</a>        
+        <a asp-controller="TrackReview" asp-action="Update" asp-route-id="@Model.Id">Edit</a>
         <span><strong>|</strong></span>
         <a asp-controller="TrackReview" asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
     }
