--- a/musicProject/Views/TrackReview/MyTrackReviews.cshtml
+++ b/musicProject/Views/TrackReview/MyTrackReviews.cshtml
@@ -1,10 +1,12 @@
 ﻿@model IEnumerable<musicProject.Models.TrackReviewModels.TrackReviewListItem>
 
-<h1>My Track Reviews</h1>
+<div id="actions" class="text-center">
+    <h1>My Track Reviews</h1>
+    <a asp-action="Create" asp-controller="TrackReview" class="text-primary">Review A Track</a> |
+    <a asp-action="NewIndex">Back to List</a>
+</div>
 
-<a asp-action="Create" asp-controller="TrackReview" class="text-primary">Review A Track</a>
-
-<table class="table table-striped table-dark">
+<table>
     <thead>
         <tr>
             <th>Track </th>
@@ -29,5 +31,4 @@
 </table>
 
 <div>
-    <a asp-action="NewIndex">Back to List</a>
 </div>
