--- a/musicProject/Views/TrackReview/NewIndex.cshtml
+++ b/musicProject/Views/TrackReview/NewIndex.cshtml
@@ -1,12 +1,15 @@
 ﻿@model IEnumerable<musicProject.Models.TrackModels.TrackListItem>
 
-<h1>Track Reviews</h1>
+<div class="text-center" id="actions">
 
-<a asp-action="Create" asp-controller="TrackReview" class="text-primary">Review A Track</a> |
-<a asp-action="MyTrackReviews" asp-controller="TrackReview" class="text-primary">My Track Reviews</a>
-<input class="form-control" type="text" id="trackTitle" onkeyup="searchForTracks()" placeholder="Search for Tracks..">
+    <h1>Track Reviews</h1>
 
-<table id="tracksWithReviews" class="table table-striped table-dark">
+    <a asp-action="Create" asp-controller="TrackReview" class="text-primary">Review A Track</a> |
+    <a asp-action="MyTrackReviews" asp-controller="TrackReview" class="text-primary">My Track Reviews</a>
+</div>
+<input class="form-control" type="text" id="trackTitleR" onkeyup="searchForTracks()" placeholder="Search for Tracks..">
+
+<table id="tracksWithReviews">
     <thead>
         <tr>
             <th>Track </th>
@@ -33,7 +36,7 @@
 <script>
     function searchForTracks() {
         var input, filter, table, tr, td, i, txtValue;
-        input = document.getElementById("trackTitle");
+        input = document.getElementById("trackTitleR");
         filter = input.value.toUpperCase();
         table = document.getElementById("tracksWithReviews");
         tr = table.getElementsByTagName("tr");
