--- a/musicProject/Views/TrackReview/ReviewsByTrack.cshtml
+++ b/musicProject/Views/TrackReview/ReviewsByTrack.cshtml
@@ -1,12 +1,16 @@
 ﻿@model musicProject.Models.TrackModels.TrackWithReviews
 
-    <form>
-        <input asp-for="@Model.Id" hidden />
-    </form>
+<form>
+    <input asp-for="@Model.Id" hidden />
+</form>
 
-<h1><i>@Model.Title</i> Reviews</h1>
-
-<table class="table table-striped table-dark">
+<div class="text-center" id="actions">
+    <h1><i>@Model.Title</i> Reviews</h1>
+    <a asp-controller="TrackReview" asp-action="Review" asp-route-id="@Model.Id">Review This Track</a> |
+    <a asp-action="NewIndex" asp-controller="TrackReview">Back To List</a>
+</div>
+<br />
+<table>
     <thead>
         <tr>
             <th>Rating</th>
@@ -25,7 +29,4 @@
         }
     </tbody>
 </table>
-
-<hr />
-<a asp-controller="TrackReview" asp-action="Review" asp-route-id="@Model.Id">Review This Track</a> |
-<a asp-action="NewIndex" asp-controller="TrackReview">Back To List</a>
+<br />
